@@ -1481,6 +1481,19 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.errorSetPokerPlayerInfo, 0)
         return d
     # ------------------------------------------------------------------------
+    def setPokerPlayerImage(self, (client, packet), id ):
+        avatar = self.service.avatars[id]
+        avatar.queuePackets()
+        avatar.handlePacketLogic(PacketPokerPlayerImage(serial= client.getSerial(),
+                                                        image = "naked.png",
+                                                        image_type = "image/gif"))
+        found = False
+        for packet in avatar.resetPacketsQueue():
+            if packet.type == PACKET_ACK:
+                found = True
+        self.assertEquals(found, True)
+        return (client, packet)
+    # ------------------------------------------------------------------------
     def tinyFunctions(self, (client, packet), id):
         avatar = self.service.avatars[id]
         self.assertEquals(avatar.getUrl(), "random")
@@ -1496,7 +1509,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test16"
+    loader.methodPrefix = "test30"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
